Updated user generation config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
             ],
             "url": "./fhir.schema.json"
         }
-    ]
+    ],
+    "java.compile.nullAnalysis.mode": "disabled"
   }
